[gd_scene load_steps=208 format=2]

[ext_resource path="res://Sprites/Enemies/Demon/Left/Idle/IdleLeft2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Idle/IdleRight1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Walk/WalkLeft1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Idle/IdleRight4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Walk/WalkRight5.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Idle/IdleRight3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Idle/IdleLeft1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Walk/WalkLeft6.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Walk/WalkRight1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Idle/IdleRight2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Hurt/HurtLeft2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Walk/WalkRight3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Hurt/HurtLeft4.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Walk/WalkLeft3.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Idle/IdleLeft3.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Walk/WalkLeft5.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Walk/WalkRight2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Idle/IdleLeft4.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight10.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Hurt/HurtRight3.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Hurt/HurtRight4.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Hurt/HurtLeft3.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Walk/WalkLeft2.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Hurt/HurtLeft1.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Hurt/HurtRight1.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Hurt/HurtRight2.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Idle/IdleLeft5.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Idle/IdleRight5.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Walk/WalkLeft4.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Walk/WalkRight4.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Walk/WalkRight6.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Atk/AtkUp1.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Walk/WalkDown3.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Walk/WalkDown5.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Walk/WalkDown1.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Walk/WalkDown4.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Walk/WalkDown6.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Walk/WalkDown2.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Hurt/HurtDown4.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Atk/AtkDown1.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown5.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Atk/AtkDown8.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown3.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown2.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Atk/AtkDown10.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown4.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown8.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown9.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown1.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown7.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown10.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Death/DeathDown6.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Hurt/HurtDown1.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Hurt/HurtDown2.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Hurt/HurtDown3.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Atk/AtkDown9.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Atk/AtkDown11.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Idle/IdleDown2.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Idle/IdleDown5.png" type="Texture" id=70]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Idle/IdleDown3.png" type="Texture" id=72]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Idle/IdleDown1.png" type="Texture" id=73]
[ext_resource path="res://Sprites/Enemies/Demon/Down/Idle/IdleDown4.png" type="Texture" id=74]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Atk/AtkUp8.png" type="Texture" id=75]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp7.png" type="Texture" id=76]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp3.png" type="Texture" id=77]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Walk/WalkUp6.png" type="Texture" id=78]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Atk/AtkUp11.png" type="Texture" id=79]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Atk/AtkLeft8.png" type="Texture" id=81]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Atk/AtkLeft11.png" type="Texture" id=82]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Idle/IdleUp1.png" type="Texture" id=85]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp8.png" type="Texture" id=87]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Walk/WalkUp2.png" type="Texture" id=88]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Idle/IdleUp5.png" type="Texture" id=89]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft1.png" type="Texture" id=91]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Atk/AtkUp9.png" type="Texture" id=92]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Atk/AtkLeft9.png" type="Texture" id=93]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Idle/IdleUp3.png" type="Texture" id=95]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Walk/WalkUp3.png" type="Texture" id=96]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Hurt/HurtUp4.png" type="Texture" id=97]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp2.png" type="Texture" id=98]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp6.png" type="Texture" id=99]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Hurt/HurtUp2.png" type="Texture" id=100]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp4.png" type="Texture" id=101]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp5.png" type="Texture" id=102]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp10.png" type="Texture" id=103]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Hurt/HurtUp3.png" type="Texture" id=104]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Atk/AtkUp10.png" type="Texture" id=105]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Idle/IdleUp4.png" type="Texture" id=106]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp9.png" type="Texture" id=107]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Hurt/HurtUp1.png" type="Texture" id=108]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Idle/IdleUp2.png" type="Texture" id=109]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Death/DeathUp1.png" type="Texture" id=110]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Walk/WalkUp1.png" type="Texture" id=111]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Walk/WalkUp4.png" type="Texture" id=112]
[ext_resource path="res://Sprites/Enemies/Demon/Up/Walk/WalkUp5.png" type="Texture" id=113]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Atk/AtkLeft1.png" type="Texture" id=114]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Atk/AtkLeft10.png" type="Texture" id=117]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Atk/RightAtk1.png" type="Texture" id=118]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Atk/RightAtk8.png" type="Texture" id=123]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Atk/RightAtk9.png" type="Texture" id=124]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Atk/RightAtk10.png" type="Texture" id=125]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Atk/RightAtk11.png" type="Texture" id=126]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft2.png" type="Texture" id=127]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft3.png" type="Texture" id=128]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft4.png" type="Texture" id=129]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft5.png" type="Texture" id=130]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft6.png" type="Texture" id=131]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft7.png" type="Texture" id=132]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft9.png" type="Texture" id=133]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight1.png" type="Texture" id=134]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft8.png" type="Texture" id=135]
[ext_resource path="res://Sprites/Enemies/Demon/Left/Death/DeathLeft10.png" type="Texture" id=136]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight2.png" type="Texture" id=137]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight3.png" type="Texture" id=138]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight7.png" type="Texture" id=139]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight8.png" type="Texture" id=140]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight9.png" type="Texture" id=141]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight4.png" type="Texture" id=142]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight5.png" type="Texture" id=143]
[ext_resource path="res://Sprites/Enemies/Demon/Right/Death/DeathRight6.png" type="Texture" id=144]
[ext_resource path="res://Scenes/Enemies/Demon.gd" type="Script" id=145]
[ext_resource path="res://Sprites/Enemies/Demon/Reg demon Death.png" type="Texture" id=146]
[ext_resource path="res://Resources/demondeath.mp3" type="AudioStream" id=147]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 146 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 146 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 146 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 146 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 146 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 146 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 146 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 146 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 146 )
region = Rect2( 384, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 146 )
region = Rect2( 432, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 146 )
region = Rect2( 480, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 146 )
region = Rect2( 528, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 146 )
region = Rect2( 576, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 146 )
region = Rect2( 624, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 146 )
region = Rect2( 672, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 146 )
region = Rect2( 720, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 146 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 146 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 146 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 146 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 146 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 146 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 146 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 146 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 146 )
region = Rect2( 384, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 146 )
region = Rect2( 432, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 146 )
region = Rect2( 480, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 146 )
region = Rect2( 528, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 146 )
region = Rect2( 576, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 146 )
region = Rect2( 624, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 146 )
region = Rect2( 672, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 146 )
region = Rect2( 720, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 146 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 146 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 146 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 146 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 146 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 146 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 146 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 146 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 146 )
region = Rect2( 384, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 146 )
region = Rect2( 432, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 146 )
region = Rect2( 480, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 146 )
region = Rect2( 528, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 146 )
region = Rect2( 576, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 146 )
region = Rect2( 624, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 146 )
region = Rect2( 672, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 146 )
region = Rect2( 720, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 146 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 146 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 146 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 146 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 146 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 146 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 146 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 146 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 146 )
region = Rect2( 384, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 146 )
region = Rect2( 432, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 146 )
region = Rect2( 480, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 146 )
region = Rect2( 528, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 146 )
region = Rect2( 576, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 146 )
region = Rect2( 624, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 146 )
region = Rect2( 672, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 146 )
region = Rect2( 720, 0, 48, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 47 ), ExtResource( 49 ), ExtResource( 67 ), ExtResource( 52 ), ExtResource( 68 ) ],
"loop": true,
"name": "attack_down",
"speed": 8.0
}, {
"frames": [ ExtResource( 114 ), ExtResource( 81 ), ExtResource( 93 ), ExtResource( 117 ), ExtResource( 82 ) ],
"loop": true,
"name": "attack_left",
"speed": 8.0
}, {
"frames": [ ExtResource( 118 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ) ],
"loop": true,
"name": "attack_right",
"speed": 8.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 75 ), ExtResource( 92 ), ExtResource( 105 ), ExtResource( 79 ) ],
"loop": true,
"name": "attack_up",
"speed": 8.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 51 ), ExtResource( 50 ), ExtResource( 54 ), ExtResource( 48 ), ExtResource( 61 ), ExtResource( 59 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 60 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "death_down",
"speed": 8.0
}, {
"frames": [ ExtResource( 91 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 135 ), ExtResource( 133 ), ExtResource( 136 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "death_left",
"speed": 8.0
}, {
"frames": [ ExtResource( 134 ), ExtResource( 137 ), ExtResource( 138 ), ExtResource( 142 ), ExtResource( 143 ), ExtResource( 144 ), ExtResource( 139 ), ExtResource( 140 ), ExtResource( 141 ), ExtResource( 19 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "death_right",
"speed": 8.0
}, {
"frames": [ ExtResource( 110 ), ExtResource( 98 ), ExtResource( 77 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 99 ), ExtResource( 76 ), ExtResource( 87 ), ExtResource( 107 ), ExtResource( 103 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ) ],
"loop": true,
"name": "death_up",
"speed": 8.0
}, {
"frames": [ ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 44 ) ],
"loop": true,
"name": "hurt_down",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 13 ) ],
"loop": true,
"name": "hurt_left",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "hurt_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 108 ), ExtResource( 100 ), ExtResource( 104 ), ExtResource( 97 ) ],
"loop": true,
"name": "hurt_up",
"speed": 10.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 69 ), ExtResource( 72 ), ExtResource( 74 ), ExtResource( 70 ) ],
"loop": true,
"name": "idle_down",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 27 ) ],
"loop": true,
"name": "idle_left",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 28 ) ],
"loop": true,
"name": "idle_right",
"speed": 8.0
}, {
"frames": [ ExtResource( 85 ), ExtResource( 109 ), ExtResource( 95 ), ExtResource( 106 ), ExtResource( 89 ) ],
"loop": true,
"name": "idle_up",
"speed": 8.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 41 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 37 ), ExtResource( 40 ) ],
"loop": true,
"name": "walk_down",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 23 ), ExtResource( 14 ), ExtResource( 29 ), ExtResource( 16 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk_left",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 30 ), ExtResource( 5 ), ExtResource( 31 ) ],
"loop": true,
"name": "walk_right",
"speed": 8.0
}, {
"frames": [ ExtResource( 111 ), ExtResource( 88 ), ExtResource( 96 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 78 ) ],
"loop": true,
"name": "walk_up",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 146 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 146 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 146 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 146 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 146 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 146 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 146 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 146 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 146 )
region = Rect2( 384, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 146 )
region = Rect2( 432, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 146 )
region = Rect2( 480, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 146 )
region = Rect2( 528, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 146 )
region = Rect2( 576, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 146 )
region = Rect2( 624, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 146 )
region = Rect2( 672, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 146 )
region = Rect2( 720, 0, 48, 64 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Exorcism",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 12.0

[sub_resource type="CircleShape2D" id=3]
radius = 221.002

[node name="Demon" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 16
collision_mask = 44
script = ExtResource( 145 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle_down"

[node name="Exorcism" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, -2 )
scale = Vector2( 0.625, 0.609375 )
frames = SubResource( 20 )
animation = "Exorcism"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="DetectRadius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="Raduis" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 3 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="DemonDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 147 )

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
